<resources>
    <!--ads key-->
    <string name="banner_debug">ca-app-pub-3940256099942544/6300978111</string>
    <string name="banner_release">ca-app-pub-9304335491370375/9196368941</string>
    <string name="interstitial_debug">ca-app-pub-3940256099942544/1033173712</string>
    <string name="interstitial_release">ca-app-pub-9304335491370375/2818980089</string>

    <string name="app_name">Daily Padho</string>
    <string name="article_image">Article Image</string>
    <string name="share">Share</string>
    <string name="search">Search</string>
    <string name="read_more">Read more</string>
    <string name="search_hint">Search…</string>
    <string name="sort_by">Sort by</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="sources">Sources</string>
    <string name="none">None</string>
    <string name="category">Category</string>
    <string name="anytime">Anytime</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="filters">Filters</string>
    <string name="published_at">Published At</string>
    <string name="save">Save</string>
    <string name="max_source">Maximum sources selected</string>
    <string name="no_sources">No Sources</string>
    <string name="filter">Filter</string>
    <string name="top_headlines">Top Headlines</string>
    <string name="query">Query</string>
    <string name="news">News</string>
    <string name="connection_problem">Connection problem</string>
    <string name="retry">Retry</string>
    <string name="something_wrong">Something went wrong</string>
    <string name="no_source_found_change_language_or_category">No source found, change language or category</string>
    <string name="enter_query_source">Please enter query or select source</string>
    <string name="newsapi_org">NewsAPI.org</string>
    <string name="powered_by">Powered by</string>
    <string name="about">About</string>
</resources>
