<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/bt_close"
                android:layout_width="?attr/actionBarSize"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@android:string/cancel"
                android:src="@drawable/ic_close"
                android:tint="@color/grey_60" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/sources"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
                android:tint="@color/grey_60" />

            <Button
                android:id="@+id/bt_save"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingLeft="@dimen/spacing_xsmall"
                android:paddingRight="@dimen/spacing_xsmall"
                android:text="@string/save"
                android:tint="@color/grey_60" />
        </LinearLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <include layout="@layout/layout_recycler" />

    <include layout="@layout/layout_loader" />

    <TextView
        android:id="@+id/no_source"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/no_source_found_change_language_or_category"
        android:textSize="18sp"
        android:visibility="gone" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>